# Fractals

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mandelbrotwidget.cpp  mandelbrotwidget.h
